--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>English Premier Leagure</title>
-		<link rel="stylesheet" type+"text/css" media="screen" href="https://github.com/PSYmondino/OptusEPL/blob/master/CSS/EPL.css">
+		<link rel="stylesheet" type+"text/css" media="screen" href="CSS/EPL.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	</head>
